// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Realizando Instantaneas Aceptando excepciones 1`] = `
Object {
  "id": Any<Number>,
  "name": "Mikee Ramirez",
}
`;

exports[`Realizando Instantaneas Siempre va a fallar 1`] = `
Object {
  "id": 13,
  "name": "Mikee Ramirez",
}
`;

exports[`Realizando Instantaneas Snapshot 1`] = `
Object {
  "gender": "Male",
  "id": 1,
  "name": "Rick Sanches",
  "species": "Human",
  "status": "Alive",
}
`;
